<?xml version="1.0"?>
<package format="2">
  <name>rtk_odom</name>
  <version>0.1.0</version>
  <description>独立 RTK 订阅节点：订阅 /qx/evk 和 /qx/evk/heading，过滤 RTK 固定解/浮点解，发布 /rtk_odom 和 /rtk_path</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
